--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
+      - name: Fix output folder permissions
+        run: |
+          mkdir -p output
+          chmod -R 777 output
       - name: Install PHP
         run: sudo apt-get install -y php-cli
 
