--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,16 @@ jobs:
 
       - name: Generate Static HTML
         run: php generate_static.php
+      
+      - name: Copy assets to output
+        run: |
+          cp -r assets output/
+          cp -r css output/
+          cp -r js output/
+          cp -r img output/
+          cp -r translations output/
+          cp -r pages output/
+          cp -r fonts output/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
